tests/snapshots/infos/inter_clique_peer_info.snap
---
source: tests/utils.rs
assertion_line: 13
info:
  program: kermit
  args:
    - infos
    - inter-clique-peer-info
---
success: true
exit_code: 0
----- stdout -----
[]

----- stderr -----
