tests/snapshots/infos/misbehaviors.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - misbehaviors
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "peer": "1.2.3.4",
    "status": {
      "type": "Banned",
      "until": "<UNTIL>"
    }
  }
]

----- stderr -----
