tests/snapshots/infos/misbehaviors_ban_unban.snap
---
source: tests/utils.rs
assertion_line: 13
info:
  program: kermit
  args:
    - infos
    - misbehaviors-ban-unban
    - Unban
    - 1.2.3.4
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
