tests/snapshots/infos/misbehaviors_ban_unban_no_params.snap
---
source: tests/utils.rs
assertion_line: 13
info:
  program: kermit
  args:
    - infos
    - misbehaviors-ban-unban
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TYPE>

Usage: kermit infos misbehaviors-ban-unban <TYPE> [PEERS]...

For more information, try '--help'.
