tests/snapshots/infos/self_clique.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - infos
    - self-clique
---
success: true
exit_code: 0
----- stdout -----
{
  "cliqueId": "<CLIQUE_ID>",
  "nodes": [
    {
      "address": "127.0.0.1",
      "minerApiPort": 20973,
      "restPort": 22973,
      "wsPort": 21973
    }
  ],
  "selfReady": true,
  "synced": true
}

----- stderr -----
