tests/snapshots/infos/unreachable_brokers.snap
---
source: tests/utils.rs
assertion_line: 38
info:
  program: kermit
  args:
    - infos
    - unreachable-brokers
---
success: true
exit_code: 0
----- stdout -----
[
  "1.2.3.4"
]

----- stderr -----
