tests/snapshots/infos/version.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - "--url=http://localhost:33788"
    - infos
    - version
---
success: true
exit_code: 0
----- stdout -----
{
  "version": "v4.2.5"
}

----- stderr -----
